--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -22,18 +22,24 @@ jobs:
           echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
           echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
+      - name: ⬇️ Install Trace CLI Dependencies
+        run: |
+          npm install @opentelemetry/sdk-node \
+                      @opentelemetry/api \
+                      @opentelemetry/resources \
+                      @opentelemetry/semantic-conventions \
+                      @opentelemetry/exporter-trace-otlp-proto \
+                      node-fetch \
+                      dotenv \
+                      winston
+
       - id: start_trace
         name: 🚀 Start Build Trace
         run: |
           node trace-cli.js start --step=build | tee trace_output.txt
           cat trace_output.txt
-          # Get first non-blank values for both and print to output for debug
-          export TRACE_ID=$(grep '^trace_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)
-          export PARENT_SPAN_ID=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)
-          echo "TRACE_ID=$TRACE_ID"
-          echo "PARENT_SPAN_ID=$PARENT_SPAN_ID"
-          echo "trace_id=$TRACE_ID" >> $GITHUB_OUTPUT
-          echo "parent_span_id=$PARENT_SPAN_ID" >> $GITHUB_OUTPUT
+          echo "trace_id=$(grep '^trace_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          echo "parent_span_id=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - id: install_start
         name: 📦 Install Dependencies (Start)
@@ -42,8 +48,12 @@ jobs:
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
           cat output.txt
-          export SPAN_ID=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)
-          echo "span_id=$SPAN_ID" >> $GITHUB_OUTPUT
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+
+      - name: 🐞 Debug Install Span ID
+        run: |
+          echo "Trace ID: ${{ steps.start_trace.outputs.trace_id }}"
+          echo "Install Span ID: ${{ steps.install_start.outputs.span_id }}"
 
       - name: 📦 Install Dependencies (Execute)
         run: npm install
@@ -61,8 +71,12 @@ jobs:
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
           cat output.txt
-          export SPAN_ID=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)
-          echo "span_id=$SPAN_ID" >> $GITHUB_OUTPUT
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+
+      - name: 🐞 Debug Build/Test Span ID
+        run: |
+          echo "Trace ID: ${{ steps.start_trace.outputs.trace_id }}"
+          echo "Build/Test Span ID: ${{ steps.build_start.outputs.span_id }}"
 
       - name: 🧪 Build and Test (Execute)
         run: |
@@ -76,19 +90,23 @@ jobs:
             --span-id=${{ steps.build_start.outputs.span_id }}
 
       - id: zip_start
-        name: 🗜️ Zip Release (Start)
+        name: 🗜️ Zip Artifact (Start)
         run: |
           node trace-cli.js start-child --step="Zip Artifact" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
           cat output.txt
-          export SPAN_ID=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)
-          echo "span_id=$SPAN_ID" >> $GITHUB_OUTPUT
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
-      - name: 🗜️ Zip Release (Execute)
+      - name: 🐞 Debug Zip Span ID
+        run: |
+          echo "Trace ID: ${{ steps.start_trace.outputs.trace_id }}"
+          echo "Zip Span ID: ${{ steps.zip_start.outputs.span_id }}"
+
+      - name: 🗜️ Zip Artifact (Execute)
         run: zip release.zip . -r -x "node_modules/*" -x ".git/*"
 
-      - name: 🗜️ Zip Release (End)
+      - name: 🗜️ Zip Artifact (End)
         run: |
           node trace-cli.js end-child --step="Zip Artifact" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
@@ -99,6 +117,11 @@ jobs:
         with:
           name: node-app
           path: release.zip
+
+      - name: 🐞 Debug Root Span IDs
+        run: |
+          echo "Trace ID: ${{ steps.start_trace.outputs.trace_id }}"
+          echo "Root Parent Span ID: ${{ steps.start_trace.outputs.parent_span_id }}"
 
       - name: 🛑 End Build Trace
         run: |
@@ -120,17 +143,24 @@ jobs:
           echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
           echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
+      - name: ⬇️ Install Trace CLI Dependencies
+        run: |
+          npm install @opentelemetry/sdk-node \
+                      @opentelemetry/api \
+                      @opentelemetry/resources \
+                      @opentelemetry/semantic-conventions \
+                      @opentelemetry/exporter-trace-otlp-proto \
+                      node-fetch \
+                      dotenv \
+                      winston
+
       - id: start_trace
         name: 🚀 Start Deploy Trace
         run: |
           node trace-cli.js start --step=deploy | tee trace_output.txt
           cat trace_output.txt
-          export TRACE_ID=$(grep '^trace_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)
-          export PARENT_SPAN_ID=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)
-          echo "TRACE_ID=$TRACE_ID"
-          echo "PARENT_SPAN_ID=$PARENT_SPAN_ID"
-          echo "trace_id=$TRACE_ID" >> $GITHUB_OUTPUT
-          echo "parent_span_id=$PARENT_SPAN_ID" >> $GITHUB_OUTPUT
+          echo "trace_id=$(grep '^trace_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+          echo "parent_span_id=$(grep '^parent_span_id=' trace_output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
 
       - name: 📥 Download Artifact
         uses: actions/download-artifact@v4
@@ -144,8 +174,12 @@ jobs:
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
           cat output.txt
-          export SPAN_ID=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)
-          echo "span_id=$SPAN_ID" >> $GITHUB_OUTPUT
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+
+      - name: 🐞 Debug Unzip Span ID
+        run: |
+          echo "Trace ID: ${{ steps.start_trace.outputs.trace_id }}"
+          echo "Unzip Span ID: ${{ steps.unzip_start.outputs.span_id }}"
 
       - name: 📂 Unzip Artifact (Execute)
         run: unzip -o release.zip
@@ -163,8 +197,12 @@ jobs:
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --parent-span-id=${{ steps.start_trace.outputs.parent_span_id }} | tee output.txt
           cat output.txt
-          export SPAN_ID=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)
-          echo "span_id=$SPAN_ID" >> $GITHUB_OUTPUT
+          echo "span_id=$(grep '^span_id=' output.txt | head -1 | cut -d '=' -f2 | xargs)" >> $GITHUB_OUTPUT
+
+      - name: 🐞 Debug Deploy Span ID
+        run: |
+          echo "Trace ID: ${{ steps.start_trace.outputs.trace_id }}"
+          echo "Deploy Span ID: ${{ steps.deploy_start.outputs.span_id }}"
 
       - name: 🚀 Deploy to Azure (Execute)
         run: |
@@ -176,6 +214,11 @@ jobs:
           node trace-cli.js end-child --step="Azure Deployment" \
             --trace-id=${{ steps.start_trace.outputs.trace_id }} \
             --span-id=${{ steps.deploy_start.outputs.span_id }}
+
+      - name: 🐞 Debug Root Span IDs
+        run: |
+          echo "Trace ID: ${{ steps.start_trace.outputs.trace_id }}"
+          echo "Root Parent Span ID: ${{ steps.start_trace.outputs.parent_span_id }}"
 
       - name: 🛑 End Deploy Trace
         run: |
