--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,23 +12,14 @@ jobs:
       - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set Secrets as Env Variables
-        run: |
-          echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
-          echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
-          echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
-
-      - name: ⬇️ Install Trace Dependencies
-        run: |
-          npm install @opentelemetry/sdk-node \
-                      @opentelemetry/api \
-                      @opentelemetry/resources \
-                      @opentelemetry/semantic-conventions \
-                      @opentelemetry/exporter-trace-otlp-proto \
-                      dotenv
+      - name: ⬇️ Install Dependencies
+        run: npm ci
 
       - name: 🏗️ Build and Trace All Steps
         run: node pipeline-trace.js Build
+
+      - name: 🗜️ Zip Release
+        run: zip release.zip . -r -x "node_modules/*" -x ".git/*"
 
       - name: ⬆️ Upload Artifact
         uses: actions/upload-artifact@v4
@@ -43,41 +34,31 @@ jobs:
       - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set Secrets as Env Variables
+      - name: ⚙️ Set Env Vars
         run: |
           echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
           echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
           echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
-
-      - name: ⬇️ Install Trace Dependencies
-        run: |
-          npm install @opentelemetry/sdk-node \
-                      @opentelemetry/api \
-                      @opentelemetry/resources \
-                      @opentelemetry/semantic-conventions \
-                      @opentelemetry/exporter-trace-otlp-proto \
-                      dotenv
+          echo "AZURE_WEBAPP_NAME=gen3emailreporting" >> $GITHUB_ENV
+          echo "AZURE_WEBAPP_SLOT=Production" >> $GITHUB_ENV
+          echo "AZURE_PUBLISH_PROFILE='${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BC4BABCD01F44C619462527428A40790 }}'" >> $GITHUB_ENV
 
       - name: 📥 Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: 🔐 Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: ⬇️ Install Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
-      - name: 🚀 Deploy and Trace All Steps
+      - name: 🏗️ Deploy and Trace All Steps
         run: node pipeline-trace.js Deploy
-
-      # The actual Azure deployment is done inside pipeline-trace.js for tracing
-      # If you want to run the deploy action separately and just trace the step, you can do:
-      # - name: 'Deploy to Azure Web App'
-      #   id: deploy-to-webapp
-      #   uses: azure/webapps-deploy@v3
-      #   with:
-      #     app-name: 'gen3emailreporting'
-      #     slot-name: 'Production'
-      #     package: .
-      #     publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BC4BABCD01F44C619462527428A40790 }}
+        env:
+          DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_API_TOKEN }}
+          DYNATRACE_OTLP_URL: ${{ secrets.DYNATRACE_OTLP_URL }}
+          DYNATRACE_LOG_INGEST_URL: ${{ secrets.DYNATRACE_LOG_INGEST_URL }}
+          AZURE_WEBAPP_NAME: gen3emailreporting
+          AZURE_WEBAPP_SLOT: Production
+          AZURE_PUBLISH_PROFILE: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BC4BABCD01F44C619462527428A40790 }}
+          AZURE_RESOURCE_GROUP: gen3emailreporting_group
