--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,10 @@ jobs:
       - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
-      - name: ⬇️ Install Dependencies
-        run: npm ci
+      - name: ⬇️ Install All Dependencies (including OpenTelemetry)
+        run: |
+          npm ci
+          npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/exporter-trace-otlp-proto @opentelemetry/resources @opentelemetry/semantic-conventions dotenv
 
       - name: 🏗️ Build and Trace All Steps
         run: node pipeline-trace.js Build
@@ -56,6 +58,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: ⬇️ Install All Dependencies (including OpenTelemetry)
+        run: |
+          npm ci
+          npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/exporter-trace-otlp-proto @opentelemetry/resources @opentelemetry/semantic-conventions dotenv
 
       - name: ⬇️ Install Azure CLI
         run: |
