Update Azure deployment to use azure/login and CLI
Replaces manual Azure CLI installation and publish profile handling with the azure/login GitHub Action and direct use of the Azure CLI for deployment. Adds GitHub Actions metadata to tracing spans and logs Dynatrace trace ID for better observability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,6 @@ jobs:
       DYNATRACE_LOG_INGEST_URL: ${{ secrets.DYNATRACE_LOG_INGEST_URL }}
       AZURE_WEBAPP_NAME: gen3emailreporting
       AZURE_WEBAPP_SLOT: Production
-      AZURE_PUBLISH_PROFILE: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BC4BABCD01F44C619462527428A40790 }}
       AZURE_RESOURCE_GROUP: gen3emailreporting_group
 
     steps:
@@ -47,9 +46,7 @@ jobs:
       DYNATRACE_LOG_INGEST_URL: ${{ secrets.DYNATRACE_LOG_INGEST_URL }}
       AZURE_WEBAPP_NAME: gen3emailreporting
       AZURE_WEBAPP_SLOT: Production
-      AZURE_PUBLISH_PROFILE: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BC4BABCD01F44C619462527428A40790 }}
       AZURE_RESOURCE_GROUP: gen3emailreporting_group
-
     steps:
       - name: 🧾 Checkout Code
         uses: actions/checkout@v4
@@ -64,9 +61,10 @@ jobs:
           npm ci
           npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/exporter-trace-otlp-proto @opentelemetry/resources @opentelemetry/semantic-conventions dotenv
 
-      - name: ⬇️ Install Azure CLI
-        run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+      - name: 🔑 Azure Login
+        uses: azure/login@v2
+        with:
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BC4BABCD01F44C619462527428A40790 }}
 
       - name: 🏗️ Deploy and Trace All Steps
         run: node pipeline-trace.js Deploy
