--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,16 @@ jobs:
       - name: ⬇️ Install All Dependencies (including OpenTelemetry)
         run: |
           npm ci
-          npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/exporter-trace-otlp-proto @opentelemetry/resources @opentelemetry/semantic-conventions dotenv
+          npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/exporter-trace-otlp-proto @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/sdk-logs @opentelemetry/exporter-logs-otlp-proto
 
-      - name: 🏗️ Build and Trace All Steps
+      - name: 🏗️ Build and Trace All Steps (logs + traces)
         run: node pipeline-trace.js Build
+        env:
+          DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_API_TOKEN }}
+          DYNATRACE_OTLP_URL: ${{ secrets.DYNATRACE_OTLP_URL }}
+          DYNATRACE_LOG_INGEST_URL: ${{ secrets.DYNATRACE_LOG_INGEST_URL }}
+          AZURE_WEBAPP_NAME: ${{ env.AZURE_WEBAPP_NAME }}
+          GITHUB_SHA: ${{ github.sha }}
 
       - name: 🗜️ Zip Release
         run: zip release.zip . -r -x "node_modules/*" -x ".git/*"
@@ -74,13 +80,14 @@ jobs:
       - name: 📅 Mark Deploy End Time
         run: echo "DEPLOY_END=$(date +%s)" >> $GITHUB_ENV
 
-      - name: 📊 Trace Deploy (including duration)
+      - name: 📊 Trace & Log Deploy (including duration)
         run: |
-          npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/exporter-trace-otlp-proto @opentelemetry/resources @opentelemetry/semantic-conventions
+          npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/exporter-trace-otlp-proto @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/sdk-logs @opentelemetry/exporter-logs-otlp-proto
           node pipeline-trace.js Deploy
         env:
           DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_API_TOKEN }}
           DYNATRACE_OTLP_URL: ${{ secrets.DYNATRACE_OTLP_URL }}
+          DYNATRACE_LOG_INGEST_URL: ${{ secrets.DYNATRACE_LOG_INGEST_URL }}
           DEPLOY_START: ${{ env.DEPLOY_START }}
           DEPLOY_END: ${{ env.DEPLOY_END }}
           AZURE_WEBAPP_NAME: ${{ env.AZURE_WEBAPP_NAME }}
