--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,9 @@ jobs:
         with:
           node-version: '22.x'
 
-      # Run all build steps INSIDE the tracing script!
+      - name: ⬇️ Install All Dependencies (for tracing)
+        run: npm ci
+
       - name: 📊 Trace & Log Build (OTel)
         run: node pipeline-trace.js Build
         env:
@@ -66,6 +68,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
+
+      - name: ⬇️ Install All Dependencies (for tracing)
+        run: npm ci
 
       - name: 📅 Mark Deploy Start Time
         id: mark_deploy_start
